--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
       <artifactId>LDApredict</artifactId>
       <version>1.0</version>
     </dependency>
+    <dependency>
+      <groupId>edu.stanford.nlp</groupId>
+      <artifactId>stanford-corenlp</artifactId>
+      <version>3.4.1</version>
+    </dependency>
 	</dependencies>
 
 
